# zero2prod

./: App.toml  Cargo.toml  Dockerfile
.do/: spec.yaml
.github/workflows/: general.yml
.sqlx/: query-157dca9d9431c2db3d2719a06c81127c5dead111f74acdf4135012a41a5c1f7c.json  query-24ab02f92553cc37a416109b57012656dbec91878bfa8fb0434f7cf19e789865.json  query-2e440b3f5c0e3d768218f98b731fc8e38a96a0c55a7cc0cb24c0dc2f8d186c67.json  query-39837cf5c10c590e5d3955037e7d8ba54cecfd9922e3c01eb9d145f8faad2055.json  query-3eae74059d56d559edae4fd7fa0557c03435b790a2df6911ecf2772bd0ced18b.json  query-43e458744731c91d83c3302d28e0e4d3454ede60784f863249946381c659cc8c.json  query-50dbd97064a65f6673a9904d39033afddb608bb044dd4209449b474f7359c830.json  query-567d4f5206254114ad525c52fcc94ac32643a2237e02cc9c6899a09fbb7bb9ba.json  query-6094cea1a50e87592c2febfe0e7958e629fffe7be2ca1883ab63bad058822dc5.json  query-6dc5485ae3c335e79f9620c42ea2a5a261399399ee1bfa44ab91cccbef522d5e.json  query-7059eda6eb73ef1d1471cc5a9d7430a682e42a6be5e4c7c3f50a0e1b71f32399.json  query-720b5c794f86979f3c6178dc42ae55fb3bb315592cff5689f8d845fdf4f94564.json  query-7dda8440317a5b556d2df8432cb1d76818a2f426fdb5daab07ba6ab73967386f.json  query-8549fa2a8655b521f248ba498bb6c9241c46490a21ffcf32f081be838cb08e68.json  query-92c17c3abdc4247c427fcaedf2d1ba5a71c10aef221b7841eb9c948a549f79e8.json  query-9472f6d651609257133b625053a0322802e563853da60d62fb89ed1e185255b8.json  query-9559443074d0258354ce8f20d55801a4ba95dc598c87eef497e87b4ec2b5fd57.json  query-96e87715fcceb8df6404ff05ab3ea4ffcab5c7133312a6327d228a44f91b1690.json  query-a4f51c50901ef1daff44abfd41ffa5cc8e6b166253a95c55ce04918175036a64.json  query-b0acdc78d5dbf35826fd6a6ad1de2ecc0757e7d111e8828a2adee88e4efdcee9.json  query-b1ed0633f4ece2c6f1152f236039fa32aea0538db27de60844c2253cbc3ec7a2.json  query-c8758fb2ddaa18981f5107fdf30ae48066b0b16143cfa6c5a9d3d7d180ab86ae.json  query-c8e636fd77794e613e36d1899c213a810912f443db7661bee205b4bccd4bce6e.json  query-cf9e531948e567f35f88a89461b20d831dafd2c66c9ba07059ca39234ca10240.json  query-db450438801515c4c711205c70eecab274905d7c4790e0f93dc6801ee7d73706.json
config/: Base.toml  Production.toml
migrations/: 20250228164558_make_status_not_null_in_subscriptions.sql  20250228165337_create_subscription_tokens_table.sql  20250302145454_make_id_unique_in_subscription_tokens.sql  20250304150808_create_users_table.sql  20250308082332_seed_user.sql  20250309130853_create_idempotency_table.sql  20250309165247_relax_null_checks_on_idempotency.sql  20250310014604_create_newsletter_issues_table.sql  20250310015517_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: app.rs  auth.rs  config.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/auth/: middleware.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs  user_password.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  (+1 more)
tests/: health_check.rs  subscribe.rs
(+26 files in other folders)
