[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
config = "0.15.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1.42.0", features = ["macros"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
claims = "0.8.0"
reqwest = "0.12.9"

[profile.release]
strip = "symbols"
