[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
config = "0.15.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1.42.0", features = ["macros"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
validator = "0.20.0"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "2.0.12"
anyhow = "1.0.97"
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
serde_json = "1.0.139"

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
claims = "0.8.0"
fake = "3"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.42.0", features = ["rt", "macros"] }
wiremock = "0.6.2"

[profile.release]
strip = "symbols"
